--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,6 @@
 
 
- DATABASE_URL="mongodb://127.0.0.1:27017/Routerproject"
+ DATABASE_URL="mongodb://127.0.0.1:27017/"
  PORT=8000
+
+ DBNAME="Routerproject"
